# ai-subsystems

./: .gitignore  Cargo.toml  README.md
assets/: basic.prompt.liquid
examples/: basic_mistral_ai.rs  basic_octo_ai.rs  basic_open_ai.rs  batch_example.rs  image_gen.rs  text_to_speech.rs
src/: lib.rs  main.rs
src/audio_api/: client.rs  mod.rs  request.rs  response.rs
src/images_api/: client.rs  request.rs  response.rs
src/text_api/: client.rs  common.rs  mod.rs  request.rs  response.rs  xml_dsl.rs
src/text_api/utils/: markdown.rs
