[package]
name = "ai-subsystems"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
bytes = "1.0"

futures = { version = "0.3", features = [ "default" ] }

scraper = "0.18.1"
liquid = "0.26.4"
unindent = "0.2.3"
colored = "2.1.0"

markdown = "0.3.0"